--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "openai>=1.107.2",
     "python-dotenv>=1.0.1",
+    "scikit-learn>=1.3.0",
 ]
 
 [tool.uv]
